module.exports = class Product {
  // TODO
}
